--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "webpack-dev-middleware": "1.6.1"
   },
   "dependencies": {
+    "express": "4.13.4",
+    "moment": "^2.13.0",
     "react": "15.0.1",
-    "redux": "3.5.2",
+    "react-day-picker": "^2.2.0",
     "react-dom": "15.0.1",
-    "express": "4.13.4"
+    "redux": "3.5.2"
   }
 }
